# lte-gateway

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README.rst  child_secure_partition_manager.conf  nrf9160dk_nrf9160_ns_spm.conf  nrf9160dk_nrf9160ns.overlay  old_gw_pm_static.yml  prj_apricity_gateway_nrf9160ns.conf  prj_nrf9160dk_nrf9160_ns.conf  prj_nrf9160dk_nrf9160ns.conf  prj_thingy91_nrf9160ns.conf  sample.yaml  thingy91_nrf9160ns.overlay  west.yml
boards/: nrf9160dk_nrf9160_0_14_0.overlay
boards/arm/apricity_gateway_nrf9160/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  apricity_gateway_nrf9160.dts  apricity_gateway_nrf9160.yaml  apricity_gateway_nrf9160_common.dts  apricity_gateway_nrf9160_defconfig  apricity_gateway_nrf9160_partition_conf.dts  apricity_gateway_nrf9160ns.yaml  apricity_gateway_nrf9160ns_defconfig  board_nonsecure.c  board_secure.c  nrf52840_reset.c  thingy91_nrf9160_common.dts
src/: ble.c  ble.h  ble_codec.c  ble_codec.h  ble_conn_mgr.c  ble_conn_mgr.h  cli.c  gateway.c  gateway.h  main.c  service_info.c  service_info.h
src/dfu/: peripheral_dfu.c  peripheral_dfu.h
src/flash/: flash_test.c
src/ui/: CMakeLists.txt  Kconfig  led_pwm.c  ui.c
src/ui/include/: led_effect.h  led_pwm.h  ui.h
src/watchdog/: watchdog.c
